--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -15,11 +15,11 @@
   </nz-form-item>
   <nz-form-item>
     <nz-form-control>
-      <!-- <label nz-checkbox formControlName="remember">
+      <label nz-checkbox formControlName="remember">
         <span>Remember me</span>
-      </!-->
+      </label>
       <!-- <a class="login-form-forgot">Forgot password</a> -->
-      <button nz-button class="login-form-button" [nzType]="'primary'">Log in</button>
+      <button nz-button class="login-form-button" [nzLoading]="loading" [nzType]="'primary'">Log in</button>
       <!-- Or
       <a>register now!</a> -->
     </nz-form-control>
