--- a/src/app/core/components/shell/shell.component.html
+++ b/src/app/core/components/shell/shell.component.html
@@ -14,17 +14,7 @@
             <a routerLink="/welcome">Welcome</a>
           </li>
           <li nz-menu-item nzMatchRouter>
-            <a>Monitor</a>
-          </li>
-          <li nz-menu-item nzMatchRouter>
-            <a>Workplace</a>
-          </li>
-        </ul>
-      </li>
-      <li nz-submenu nzOpen nzTitle="Form" nzIcon="form">
-        <ul>
-          <li nz-menu-item nzMatchRouter>
-            <a>Basic Form</a>
+            <a routerLink="/log-entry">Log-Entry</a>
           </li>
         </ul>
       </li>
@@ -42,6 +32,8 @@
         <span class="header-trigger" (click)="isCollapsed = !isCollapsed">
           <i class="trigger" nz-icon [nzType]="isCollapsed ? 'menu-unfold' : 'menu-fold'"></i>
         </span>
+        <!-- <nz-breadcrumb [nzAutoGenerate]="true">
+        </nz-breadcrumb> -->
       </div>
     </nz-header>
     <nz-content>
