--- a/src/app/core/components/shell/shell.component.html
+++ b/src/app/core/components/shell/shell.component.html
@@ -14,6 +14,9 @@
             <a routerLink="/welcome">Welcome</a>
           </li>
           <li nz-menu-item nzMatchRouter>
+            <a routerLink="/calendar">Calendar</a>
+          </li>
+          <li nz-menu-item nzMatchRouter>
             <a routerLink="/log-entry">Log-Entry</a>
           </li>
         </ul>
